--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,8 @@ dash_mantine_components
 dash-ag-grid
 SQLAlchemy==1.3.20
 pg8000==1.16.5
+celery==4.4.7
+diskcache
+psutil
+multiprocess
 git+https://github.com/noaaroland/sdig.git
