--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,18 @@
-dash-design-kit>=1.6.7
-dash>=2.9.1
-gunicorn>=20.0.4
-numpy>=1.19.5
-pandas>=1.1.4
+dash-design-kit
+dash
+gunicorn
+numpy
+pandas
 colorcet
 datashader
 pyproj
 redis
 kaleido
-packaging
-dash_mantine_components
+dash_mantine_components==0.12.1
 dash-ag-grid
-SQLAlchemy==1.3.20
-pg8000==1.16.5
-celery==4.4.7
+SQLAlchemy
+pg8000
+celery
 diskcache
 psutil
 multiprocess
